--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,13 @@
 
+
+h1 {
+    color: maroon;
+}
 .post {
     background-color: antiquewhite;
-    max-width: 200px;
-    padding: 1px;
-    margin: 4px 0;
-    border: 1px solid black;
+   
+}
+
+.user {
+    font-style: italic;
 }
