--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,11 @@
             <h2 class="user">@<%= post.username  %></h2>
             <p class="content"><%= post.content %></p>
             <a href="http://localhost:3000/posts/<%= post.id %>">See in detail</a>
-        </div>
-        
+            <a href="http://localhost:3000/posts/<%= post.id %>/edit">Edit</a>
+            <form method="post" action="/posts/<%=post.id%>?_method=DELETE">
+               <button>Delete Post</button>
+            </form>
+        </div> 
     <%  } %>
 
     <br/>
